creazione numeri random

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ header .flex {
     justify-content: center;
     align-items: center;
     font-size: 1.6rem;
+    cursor: pointer;
 }
 .selected {
     background-color: rgb(127, 127, 238);
