--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ header .flex {
     font-size: 1.6rem;
     cursor: pointer;
 }
-.selected {
+.safe {
     background-color: rgb(127, 127, 238);
 }
 .bomb {
